use integrate install

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,8 +11,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - run: |
+      - name: vcpkg
+        run: |
+          vcpkg integrate install
           vcpkg activate
+      - name: csolution
+        run: |
           csolution list packs -m -s GetStarted.csolution.yml > packs.txt
           test ! -s packs.txt || cpackget add -f packs.txt
           csolution convert -s GetStarted.csolution.yml -c GetStarted.Debug+AVH
