--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: vcpkg
         run: |
+          mkdir .vcpkg
           touch .vcpkg/vcpkg.path.txt
           vcpkg integrate install
           vcpkg activate
