--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,8 +13,10 @@ jobs:
       - uses: actions/checkout@v3
       - name: vcpkg
         run: |
+          pwd
           mkdir .vcpkg
           touch .vcpkg/vcpkg.path.txt
+          ls -al
           vcpkg integrate install
           vcpkg activate
       - name: csolution
