--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,8 +13,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: vcpkg
         run: |
-          mkdir /home/runner/.vcpkg
-          touch /home/runner/.vcpkg/vcpkg.path.txt
+          echo "VCPKG_ROOT=$VCPKG_INSTALLATION_ROOT" >> $GITHUB_ENV
           vcpkg integrate install
           vcpkg activate
       - name: csolution
