--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,8 +13,8 @@ jobs:
       - uses: actions/checkout@v3
       - name: vcpkg
         run: |
-          mkdir -p /root/.vcpkg/ $HOME/.vcpkg
-          touch /root/.vcpkg/vcpkg.path.txt $HOME/.vcpkg/vcpkg.path.txt
+          mkdir -p $HOME/.vcpkg
+          touch $HOME/.vcpkg/vcpkg.path.txt
           echo "VCPKG_ROOT=$VCPKG_INSTALLATION_ROOT" >> $GITHUB_ENV
           vcpkg integrate install
           vcpkg activate
